back to 1st encoding