@@ -6,7 +6,6 @@ import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.util.Base64;
 import java.util.Set;
 
 import javax.ws.rs.GET;
@@ -58,7 +57,7 @@ public class TwitterCountResource {
         String credentials = (String) obj.get("user");
         credentials += ":" + (String) obj.get("password");
 		try {
-			credentials = new String(Base64.encodeBase(credentials.getBytes()));
+			credentials = javax.xml.bind.DatatypeConverter.printBase64Binary(credentials.getBytes());
 		} catch (UnsupportedEncodingException e) {
 			return e.toString();
 		}
